--- a/miniblog/templates/miniblog/dashboard.html
+++ b/miniblog/templates/miniblog/dashboard.html
@@ -1,19 +1,54 @@
 {% extends 'miniblog/base.html' %}
 {% load static %}
+
+{% block side %}
+    <div class="col-sm-2 text-white my-5">
+        <h4 class="my-5">Profile</h4>
+        <h5>{{fullname}}</h5>
+    </div>
+{% endblock side %}
+
 {% block content %}
 
 <div class="col-sm-10 col-md-10 mb-5">
     <h3 class="text-white my-5">Dashboard page</h3>
 
+    <a href="{% url 'addpost' %}" class="btn btn-success">Add Post</a>
+    {% if post %}
+    
+        <h4 class="text-center alert alert-info mt-3">
+            Data of your's
+        </h4>
 
-    {% for pst in post %}
-    <div class="jumbotron jumbotron-fluid jumbo-color p-5">
-        <div class="container text-light">
-            <h1 class="display font-weight-bold">{{pst.title}}</h1>
-            <p class="lead mt-5 ml-2">{{pst.desc}}</p>
-        </div>
-    </div>
-    {% endfor %}
+
+            <table class="table table-dark table-hover table-bordered">
+                <tr>
+                    <th>Title</th>
+                    <th>Content</th>
+                    <th>Action</th>
+                </tr>
+                {% for pst in post %}
+                <tr>
+                    <td>
+                        {{pst.title}}
+                    </td>
+                    <td style="max-height: 10px; overflow-y:auto">
+                        {{pst.desc}}
+                    </td>
+                    <td>
+                        <a href="{% url 'updatepost' pst.id %}" class="btn btn-primary">Edit</a>
+                        <form action="{% url 'deletepost' pst.id %}" method="POST">
+                            {% csrf_token %}
+                            <input type="submit" value="Delete" class="btn btn-danger mt-2">
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}                
+            </table>
+    {% else %}
+        <h4 class="text-center alert alert-info mt-3">No data Available dost</h4>
+    {% endif %}
+    
 
     
 </div>
